# serializer version: 1
# name: test_select_ok[select_as_struct]
  '''
  query_expr
    select
      select_shape	STRUCT
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_table
          path_expression
            ident	table1
  
  '''
# ---
# name: test_select_ok[select_as_value]
  '''
  query_expr
    select
      select_shape	VALUE
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_table
          path_expression
            ident	table1
  
  '''
# ---
# name: test_select_ok[select_from_alias_explicit]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_table
          path_expression
            ident	table1
          as_alias
            ident	alias1
  
  '''
# ---
# name: test_select_ok[select_from_alias_implicit]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_table
          path_expression
            ident	table1
          as_alias
            ident	alias1
  
  '''
# ---
# name: test_select_ok[select_from_multi]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	column1
        select_expr
          ident	column2
      from_clause
        from_clause_comma_cross_join
          from_clause
            from_item_table
              path_expression
                ident	table1
          from_item_table
            path_expression
              ident	table2
  
  '''
# ---
# name: test_select_ok[select_from_time_travel]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_table
          path_expression
            ident	table1
          time_travel
            string_literal	'1970-01-01'
  
  '''
# ---
# name: test_select_ok[select_kitchen_sink]
  '''
  query_expr
    select
      select_list
        select_star
        select_expr
          ident	column1
        select_expr
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	1
          as_alias
            ident	column2
      from_clause
        from_clause_comma_cross_join
          from_clause
            from_item_table
              path_expression
                ident	table1
              as_alias
                ident	alias1
          from_item_subquery
            subquery
              query_expr
                select
                  select_list
                    select_expr
                      ident	column7
                  from_clause
                    from_item_table
                      path_expression
                        ident	table2
            as_alias
              ident	alias2
  
  '''
# ---
# name: test_select_ok[select_list_alias_explicit]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	column1
          as_alias
            ident	alias1
      from_clause
        from_item_table
          path_expression
            ident	table1
  
  '''
# ---
# name: test_select_ok[select_list_alias_implicit]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	column1
          as_alias
            ident	alias1
      from_clause
        from_item_table
          path_expression
            ident	table1
  
  '''
# ---
# name: test_select_ok[select_list_multi]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	column1
        select_expr
          ident	column2
      from_clause
        from_item_table
          path_expression
            ident	table1
  
  '''
# ---
# name: test_select_ok[select_list_single]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_table
          path_expression
            ident	table1
  
  '''
# ---
# name: test_select_ok[select_list_trailing_comma]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_table
          path_expression
            ident	table2
  
  '''
# ---
# name: test_select_ok[select_literal]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
  
  '''
# ---
# name: test_select_ok[select_star]
  '''
  query_expr
    select
      select_list
        select_star
      from_clause
        from_item_table
          path_expression
            ident	table1
  
  '''
# ---
# name: test_select_ok[select_star_scoped]
  '''
  query_expr
    select
      select_list
        select_dot_star
          ident	column1
      from_clause
        from_item_table
          path_expression
            ident	table1
  
  '''
# ---
# name: test_select_ok[select_star_scoped_nested]
  '''
  query_expr
    select
      select_list
        select_dot_star
          path_expression
            ident	column1
            ident	column2
      from_clause
        from_item_table
          path_expression
            ident	table1
  
  '''
# ---
# name: test_subquery_ok[select_from_subquery]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_subquery
          subquery
            query_expr
              select
                select_list
                  select_expr
                    ident	column1
                from_clause
                  from_item_table
                    path_expression
                      ident	table1
  
  '''
# ---
# name: test_subquery_ok[select_from_subquery_aliased]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_subquery
          subquery
            query_expr
              select
                select_list
                  select_expr
                    ident	column1
                from_clause
                  from_item_table
                    path_expression
                      ident	table1
          as_alias
            ident	table2
  
  '''
# ---
# name: test_subquery_ok[subquery]
  '''
  query_expr
    subquery
      query_expr
        select
          select_list
            select_expr
              integer_literal	1
  
  '''
# ---
# name: test_subquery_ok[subquery_nested]
  '''
  query_expr
    subquery
      query_expr
        select
          select_list
            select_expr
              subquery
                query_expr
                  select
                    select_list
                      select_expr
                        subquery
                          query_expr
                            select
                              select_list
                                select_expr
                                  integer_literal	1
  
  '''
# ---
# name: test_unnest_ok[unnest_single]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_unnest
          unnest_expr
            ident	array1
  
  '''
# ---
# name: test_unnest_ok[unnest_single_alias]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_unnest
          unnest_expr
            ident	array1
          as_alias
            ident	alias1
  
  '''
# ---
# name: test_unnest_ok[unnest_trailing]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	column1
      from_clause
        from_clause_comma_cross_join
          from_clause
            from_item_table
              path_expression
                ident	table1
          from_item_unnest
            unnest_expr
              ident	array1
  
  '''
# ---
# name: test_unnest_ok[unnest_trailing_alias_with_offset_alias]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	column1
      from_clause
        from_clause_comma_cross_join
          from_clause
            from_item_table
              path_expression
                ident	table1
          from_item_unnest
            unnest_expr
              ident	array1
            as_alias
              ident	alias1
            from_unnest_offset_expr
              as_alias
                ident	alias2
  
  '''
# ---
# name: test_unnest_ok[unnest_trailing_with_offset]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	column1
      from_clause
        from_clause_comma_cross_join
          from_clause
            from_item_table
              path_expression
                ident	table1
          from_item_unnest
            unnest_expr
              ident	array1
            from_unnest_offset_expr
  
  '''
# ---
# name: test_unnest_ok[unnest_trailing_with_offset_alias]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	column1
      from_clause
        from_clause_comma_cross_join
          from_clause
            from_item_table
              path_expression
                ident	table1
          from_item_unnest
            unnest_expr
              ident	array1
            from_unnest_offset_expr
              as_alias
                ident	alias1
  
  '''
# ---
